--- a/view/dashboard_avanzado_tesoreria.html
+++ b/view/dashboard_avanzado_tesoreria.html
@@ -4,6 +4,9 @@
    .content-wrapper, .right-side {
       background-color: #ecf0f5 !important;
    }
+   .gastos {
+      color: red;
+   }   
 </style>
 
 <form class="form" name="f_dashboard_avanzado" action="{$fsc->url()}" method="post">
@@ -56,40 +59,40 @@
                         <tr>
                            <td rowspan="4" class="text-center">CAJAS</td>
                            <td>Caja 1</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['caja1'])}</td>
                         </tr>
                         <tr>
                            <td>Caja 2</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['caja2'])}</td>
                         </tr>
                         <tr>
                            <td>Caja 3</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['caja3'])}</td>
                         </tr>
                         <tr>
                            <td>Total cajas</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['total_cajas'])}</td>
                         </tr>
                         <tr>
                            <td rowspan="4" class="text-center">Bancos</td>
                            <td>Banco 1</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['banco1'])}</td>
                         </tr>
                         <tr>
                            <td>Banco 2</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['banco2'])}</td>
                         </tr>
                         <tr>
                            <td>Banco 3</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['banco3'])}</td>
                         </tr>
                         <tr>
                            <td>Total bancos</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['total_bancos'])}</td>
                         </tr>
                         <tr>
                            <td colspan="2" class="text-right">TOTAL TESORERÍA</td>
-                           <td class="text-right">{$fsc->show_precio(0)}</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_tesoreria['total_tesoreria'])}</td>
                         </tr>
                      </table>
                   </div>
@@ -106,6 +109,30 @@
                               <th colspan="2" class="text-center">GASTOS Y COBROS PENDIENTES</th>
                            </tr>
                         </thead>
+                        <tr>
+                           <td>(a) Gastos pendientes de pago</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_gastoscobros['gastospdtepago'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>(b) Clientes pendientes de cobro</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_gastoscobros['clientespdtecobro'])}</td>
+                        </tr>
+                        <tr>
+                           <td>(c) Nóminas pendientes de pago</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_gastoscobros['nominaspdtepago'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>(d) Seguridad Social pendiente de pago</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_gastoscobros['segsocialpdtepago'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>(e) Seguridad Social pendiente de cobro</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_gastoscobros['segsocialpdtecobro'])}</td>
+                        </tr>
+                        <tr>
+                           <td>TOTAL GASTOS Y COBROS PENDIENTES</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_gastoscobros['total_gastoscobros'])}</td>
+                        </tr> 
                      </table>
                   </div>
                </div>
@@ -123,6 +150,93 @@
                               <th colspan="2" class="text-center">IMPUESTOS</th>
                            </tr>
                         </thead>
+                        <tr>
+                           <td>IRPF (nóminas + profesionales MOD 111)</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['irpf-mod111'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>IRPF (Alquiler oficina MOD 115)</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['irpf-mod115'])}</td>
+                        </tr>
+                        <tr>
+                           <td></td>
+                           <td class="text-right"></td>
+                        </tr>
+                        <tr>
+                           <td>(a) IVA Repercutido</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['iva-repercutido'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>(b) IVA Soportado</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['iva-soportado'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>(c) IVA a devolver trimestres anteriores</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['iva-devolver'])}</td>
+                        </tr>
+                        <tr>
+                           <td>Resultado IVA (MOD 303)</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['resultado_iva-mod303'])}</td>
+                        </tr>  
+                        
+                        <tr>
+                           <td></td>
+                           <td class="text-right"></td>
+                        </tr>
+                        <tr>
+                           <td>Ventas totales</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['ventas_totales'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Gastos totales</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['gastos_totales'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Resultado</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['resultado'])}</td>
+                        </tr>
+                        <tr>
+                           <td>(a) Impuesto sociedades</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['sociedades'])}</td>
+                        </tr>                                                 
+                        <tr>
+                           <td>(b) Pagos en periodos anteriores</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['pago-ant'])}</td>
+                        </tr>
+                        <tr>
+                           <td>Pago fraccionado Imp. Sociedades (MOD 202)</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['pagofraccionado-mod202'])}</td>
+                        </tr>                             
+                       <tr>
+                           <td></td>
+                           <td class="text-right"></td>
+                        </tr>
+                        <tr>
+                           <td>Resultado ejercicio anterior</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['resultado_ejanterior'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Resultado negativo otros ejercicios</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['resultado_negotros'])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Total</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['total'])}</td>
+                        </tr>
+                        <tr>
+                           <td>(a) Impuesto sociedades</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['sociedades_ant'])}</td>
+                        </tr>                                                 
+                        <tr>
+                           <td>(b) Adelantos impuesto sociedades año anterior</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['sociedades_adelantos'])}</td>
+                        </tr>
+                        <tr>
+                           <td>Total a pagar o devolver (MOD 200)</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_impuestos['total-mod200'])}</td>
+                        </tr>                         
+                        
+                        
                      </table>
                   </div>
                </div>
@@ -138,6 +252,10 @@
                               <th colspan="2" class="text-center">RESULTADOS SITUACIÓN TESORERÍA A CORTO PLAZO</th>
                            </tr>
                         </thead>
+                        <tr>
+                           <td>Total</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadosituacion["total"])}</td>
+                        </tr>                          
                      </table>
                   </div>
                </div>
@@ -151,6 +269,22 @@
                               <th colspan="2" class="text-center">RESERVAS + RESULTADOS EJERCICIOS</th>
                            </tr>
                         </thead>
+                        <tr>
+                           <td>(a) Reserva legal</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_reservasresultados["reservalegal"])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>(b) Reservas voluntarias</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_reservasresultados["reservasvoluntarias"])}</td>
+                        </tr>
+                        <tr>
+                           <td>(c) Resultado ejercicio anterior</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_reservasresultados["resultadoejercicioanterior"])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>TOTAL RESERVAS</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_reservasresultados["total_reservas"])}</td>
+                        </tr>                          
                      </table>
                   </div>
                </div>
@@ -164,6 +298,46 @@
                               <th colspan="2" class="text-center">RESULTADOS EJERCICIO ACTUAL</th>
                            </tr>
                         </thead>
+                        <tr>
+                           <td>Total ventas</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["total_ventas"])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Total gastos</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["total_gastos"])}</td>
+                        </tr>
+                        <tr>
+                           <td>RESULTADO DE EXPLOTACIÓN</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["resultadoexplotacion"])}</td>
+                        </tr>                        
+                        <tr>
+                           <td></td>
+                           <td class="text-right"></td>
+                        </tr>   
+                        <tr>
+                           <td>Amortizaciones inmovilizado intangible</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["amortizacioninmovintang"])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Amortizaciones inmovilizado material</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["amortizacioninmovmat"])}</td>
+                        </tr>
+                        <tr>
+                           <td>Total amortizaciones</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["total_amort"])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Resultado antes de impuestos RAI</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["resultado_antes_impuestos"])}</td>
+                        </tr>                        
+                        <tr>
+                           <td>Impuesto sociedades</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["impuesto_sociedades"])}</td>
+                        </tr>
+                        <tr>
+                           <td>Resultado después de impuestos RDI</td>
+                           <td class="text-right">{$fsc->show_precio($fsc->da_resultadoejercicioactual["resultado_despues_impuestos"])}</td>
+                        </tr>                                                   
                      </table>
                   </div>
                </div>
@@ -173,4 +347,8 @@
    </div>
 </form>
 
+
+<script type="text/javascript" >
+$('tr td:contains("-")').addClass('gastos');
+</script>
 {include="footer"}
