--- a/view/dashboard_avanzado.html
+++ b/view/dashboard_avanzado.html
@@ -85,7 +85,7 @@
                   <a href="#">Resumen {$fsc->year}</a>
                </li>
                <li role="presentation">
-                  <a href="index.php?page=dashboard_avanzado_tesoreria&year={$fsc->year}">Tesorería {$fsc->year}</a>
+                  <a href="index.php?page=dashboard_avanzado_tesoreria">Tesorería</a>
                </li>
             </ul>
             <br/>
