--- a/view/dashboard_avanzado_tesoreria.html
+++ b/view/dashboard_avanzado_tesoreria.html
@@ -18,7 +18,7 @@
                   <a href="index.php?page=dashboard_avanzado&year={$fsc->year}">Resumen {$fsc->year}</a>
                </li>
                <li role="presentation" class="active">
-                  <a href="#">Tesorería {$fsc->year}</a>
+                  <a href="#">Tesorería</a>
                </li>
             </ul>
             <br/>
