Más y más correcciones.

--- a/view/dashboard_avanzado_tesoreria.html
+++ b/view/dashboard_avanzado_tesoreria.html
@@ -15,7 +15,7 @@
          <div class="col-sm-12">
             <ul class="nav nav-pills">
                <li role="presentation">
-                  <a href="index.php?page=dashboard_avanzado&year={$fsc->year}">Resumen {$fsc->year}</a>
+                  <a href="index.php?page=dashboard_avanzado&year={$fsc->codejercicio}">Resumen {$fsc->codejercicio}</a>
                </li>
                <li role="presentation" class="active">
                   <a href="#">Tesorería</a>
