--- a/view/dashboard_avanzado_config.html
+++ b/view/dashboard_avanzado_config.html
@@ -1,4 +1,5 @@
 {include="header"}
+
 <style>
     .title-ejercicio{
         font-size:28px;
@@ -35,6 +36,7 @@
         border-color: rgb(212, 63, 58);
     }
 </style>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
@@ -46,15 +48,6 @@
                         <a class="btn btn-xs btn-default" href="{$fsc->url()}" title="Recargar la página">
                             <span class="glyphicon glyphicon-refresh"></span>
                         </a>
-                        {if="$fsc->page->is_default()"}
-                        <a class="btn btn-xs btn-default active" href="{$fsc->url()}&amp;default_page=FALSE" title="desmarcar como página de inicio">
-                            <span class="glyphicon glyphicon-home"></span>
-                        </a>
-                        {else}
-                        <a class="btn btn-xs btn-default" href="index.php?page=dashboard_avanzado&amp;default_page=TRUE" title="marcar como página de inicio">
-                            <span class="glyphicon glyphicon-home"></span>
-                        </a>
-                        {/if}
                     </span>
                 </h1>
                 <p class="help-block"><span class="glyphicon glyphicon-exclamation-sign"></span>&nbsp;Configuración de asiento de regularizacion y de cierre</p>
@@ -90,11 +83,11 @@
 
                 <div class=" form-group">
                     <div class="input-group" style="width:100%;"> 
-                        <input class="form-control text-right" name="config[{$value1->codejercicio}][regularizacion][numero]" value="{$fsc->config[$value1->codejercicio][regularizacion][numero]}"
+                        <input class="form-control text-right" name="config[{$value1->codejercicio}][regularizacion][numero]" value="{$fsc->config[$value1->codejercicio]['regularizacion']['numero']}"
                                placeholder="Nº Asiento" 
                                aria-describedby="concepto-asiento">
-                        <span class="input-group-addon  {if="$fsc->config[$value1->codejercicio][regularizacion][error]"}danger{else}success{/if}" id="concepto-asiento">
-                                                {$fsc->config[$value1->codejercicio][regularizacion][concepto]}
+                        <span class="input-group-addon  {if="$fsc->config[$value1->codejercicio]['regularizacion']['error']"}danger{else}success{/if}" id="concepto-asiento">
+                                                {$fsc->config[$value1->codejercicio]['regularizacion']['concepto']}
                                             </span>
                         </div>
                     </div>
@@ -104,7 +97,7 @@
 
                 <div class=" form-group">
                     <div class="input-group" style="width:100%;"> 
-                        <input class="form-control text-right" name="config[{$value1->codejercicio}][irpfalquiler]" value="{$fsc->config[$value1->codejercicio][irpfalquiler]}"
+                        <input class="form-control text-right" name="config[{$value1->codejercicio}][irpfalquiler]" value="{$fsc->config[$value1->codejercicio]['irpfalquiler']}"
                                placeholder="Cuentas IRPF" 
                                aria-describedby="Cuentas IRPF separadas por comas">
 
@@ -118,7 +111,7 @@
 
                 <div class=" form-group">
                     <div class="input-group" style="width:100%;"> 
-                        <input class="form-control text-right" name="config[{$value1->codejercicio}][sociedades]" value="{$fsc->config[$value1->codejercicio][sociedades]}"
+                        <input class="form-control text-right" name="config[{$value1->codejercicio}][sociedades]" value="{$fsc->config[$value1->codejercicio]['sociedades']}"
                                placeholder="% Impuesto Sociedades" 
                                aria-describedby="% Impuesto Sociedades">
 
@@ -162,6 +155,6 @@
             <input type="hidden" name="save" value="1">
         </form>
 
-    </div>
+</div>
 
-    {include="footer"}
+{include="footer"}
