--- a/view/dashboard_avanzado.html
+++ b/view/dashboard_avanzado.html
@@ -740,6 +740,7 @@
    var distribucionLabels = {$fsc->charts['distribucion']['labels']};
    var distribucionPorc = {$fsc->charts['distribucion']['porc']};
    var distribucionColor = {$fsc->charts['distribucion']['colors']};
+   var distribucionTotal = {$fsc->charts['distribucion']['totales']};   
 </script>
 <script src="plugins/dashboard_avanzado/extras/Chart.bundle.min.js"></script>
 <script src="plugins/dashboard_avanzado/extras/charts.js"></script>
